# Furnace

./: CMakeLists.txt  main.cpp
src/: ColorHelper.cpp  ColorHelper.h  LogManager.cpp  LogManager.h
src/console/: ColorHelper.cpp  ColorHelper.h  LogManager.cpp  LogManager.h
src/json/: JsonManager.cpp  JsonManager.h  JsonUtils.cpp  JsonUtils.h
src/metadata/: MetaData.cpp  MetaData.h  MetaDataAssetIndex.cpp  MetaDataAssetIndex.h  MetaDataHelper.cpp  MetaDataHelper.h  MetaDataLibrary.cpp  MetaDataLibrary.h
src/metadata/types/: MinecraftMetaData.cpp  MinecraftMetaData.h
src/minecraft/: MinecraftComponent.cpp  MinecraftComponent.h  MinecraftComponentUtil.cpp  MinecraftComponentUtil.h  MinecraftInstance.cpp  MinecraftInstance.h  MinecraftInstanceManager.cpp  MinecraftInstanceManager.h
src/operatingsystem/: OperatingSystemManager.cpp  OperatingSystemManager.h
test/: file.json
